--- a/my-restaurant/index.html
+++ b/my-restaurant/index.html
@@ -10,20 +10,18 @@
 <body>
   <header>
     <h1>🍽️ Kaaviya’s Krazy Kitchen</h1>
-    <p>Serving bold flavors from around the world</p>
   </header>
 
   <main>
     <section id="menu">
       <h2>Popular Dishes</h2>
       <div id="menuGrid" class="menu-grid">
-        <!-- Dynamic cards will load here -->
       </div>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Kaaviya’s Krazy Kitchen | All rights reserved.</p>
+    <p>© 2025 Kaaviya’s Krazy Kitchen | kannak@rpi.edu </p>
   </footer>
 </body>
 </html>
